<resources>
    <string name="app_name">Synup</string>
    <string name="action_settings">Settings</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="code">Code:</string>
    <string name="btn_Accept">LOGIN</string>
    <string name="rememberUser">Remember user</string>
    <string name="ERROR_FILL_ALL_FIELDS">Please fill all fields</string>
    <string name="ERROR_USER_NOT_EXISTS">User does not exists, try again please.</string>
    <string name="PLACEHOLDER_USERNAME">Username</string>
    <string name="PLACEHOLDER_PASSWORD">Password</string>
    <string name="title_activity_menu">SYNUP</string>
    <string name="LOG_OUT">log out</string>
    <string name="EXIT">Exit</string>
    <string name="not_data_updated">Server\'s connection unreachable, the data may not be updated and if you have done any change in any task, these changes would not be visible for the others.</string>
    <string name="ERROR_NO_CONNECTION_LOGIN">To login with a new user you must have internet connection, try again.</string>
    <string name="VIEW_ACCTIVE_TASK">View active task</string>
    <string name="VIEW_TASKS">View team tasks</string>
    <string name="title_activity_detail">Task Detail</string>
    <string name="NEW">New</string>
    <string name="IN_PROGRESS">In progress</string>
    <string name="ABANDONED">Abandoned</string>
    <string name="FINISHED">Finished</string>
    <string name="NOT_ASSIGNED">Not Assigned</string>
    <string name="NOT_STARTED">Not Started</string>
    <string name="NAME">Name:</string>
    <string name="CODE">Code:</string>
    <string name="PROJECT">Project:</string>
    <string name="ATTENDANT">Responsible:</string>
    <string name="TEAM">Team:</string>
    <string name="PRIORITY_DATE">Priority Date:</string>
    <string name="START_DATE">Start Date:</string>
    <string name="FINISH_DATE">Finish Date:</string>
    <string name="STATUS">Status:</string>
    <string name="IS_FINISHED">Is Finished:</string>
    <string name="DESCRIPTION">Description:</string>
    <string name="LOCATION">Location:</string>
    <string name="TASK_NOT_EXISTS">Task does not exists</string>
    <string name="MAIN_MENU">Main Menu</string>
    <string name="FINISH">Finish</string>
    <string name="ABANDONE">Abandon</string>
    <string name="TAKE">Take</string>
    <string name="TASK_TOOK">Task taken</string>
    <string name="ERROR_NO_CONNECTION_TAKE_TASK">You need internet connection to take a task.</string>
    <string name="SEARCH">Search</string>
    <string name="title_activity_list">Task list</string>
    <string name="OPEN">Open</string>
    <string name="CLOSE">Close</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="SINCRONIZE">Sincronize</string>
    <string name="CANCELED">Canceled</string>
    <string name="ERROR_NO_CONNECTION">No connection</string>
    <string name="NAVIGATION">Navigation</string>
    <string name="ERROR_NO_TASK_TOOK">No available task</string>
    <string name="SYNUP">SynUp</string>
    <string name="SEARCH_TASK">Select Task</string>
    <string name="PLEASE_WAIT">Please wait</string>
    <string name="NOT_FINISHED">Not Finished</string>
    <string name="TASK_ABANDONED">Task abandoned</string>
    <string name="TASK_FINISHED">Task Finished</string>
    <string name="CONNECTING">Connecting to server</string>
    <string name="SUCCES">Action success</string>
    <string name="PRIORITY">Priority</string>
    <string name="ERROR_INESPERADO">UNEXPECTED ERROR, CONTACT WITH THE ADMINISTRATOR</string>
    <string name="FINISH_DATE_HELP">_Finish date of the task</string>
    <string name="NAME_HELP">_Name of the task</string>
    <string name="CODE_HELP">_Code of the task</string>
    <string name="DESCRIPTION_HELP">_Description of the task</string>
    <string name="EMPLOYEE_HELP">_Employee doing the task</string>
    <string name="PRIORITY_DATE_HELP">_Priority date of the task</string>
    <string name="PROJECT_HELP">_Project name of the task</string>
    <string name="START_DATE_HELP">_Start date of the task</string>
    <string name="STATUS_HELP">_Status of the task</string>
    <string name="TEAM_HELP">_Team assigned to the task</string>
    <string name="PRIORITY_HELP">_Priority of the task (0 - 5)</string>
</resources>
