<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context=".controller.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_weight="1.5" />

    <EditText
        android:id="@+id/activity_login_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:textColor="#2c2b2b"
        android:textColorHint="#FF2C2B2B"
        android:textSize="20sp"
        android:selectAllOnFocus="false"
        android:hint="@string/PLACEHOLDER_USERNAME"
        android:layout_weight="0.35" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dumy"
        android:layout_weight="0.3" />

    <EditText
        android:id="@+id/activity_login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="15"
        android:textColor="#2c2b2b"
        android:textColorHint="#FF2C2B2B"
        android:textSize="20sp"
        android:selectAllOnFocus="false"
        android:hint="@string/PLACEHOLDER_PASSWORD"
        android:layout_weight="0.35" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_weight="0.5" />

    <CheckBox
        android:id="@+id/activity_login_cb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/rememberUser"
        android:textColor="#4f4e4e"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_weight="0.5" />

    <Button
        android:id="@+id/activity_login_bt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_Accept" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_weight="0.1" />

</LinearLayout>
